syntax = "proto3";

option go_package = ".;show";

import "success_message.proto";
import "show_message.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message VideoId {
  uint32 id = 1;
}

message Video {
  bytes video = 1;
}


message UploadVideo {
  Video video = 1;
  MetaData meta_data = 2;
}


message Videos {
  repeated Video videos = 1;
}

message MetaData {
  bytes poster = 1;
  bytes sub = 2;
  string show_name = 3;
  uint32  ep_no = 4;
  google.protobuf.Timestamp created_at = 5;
  ShowId show_id = 6;
}

message VideoMetaData {
  MetaData meta_data = 1;
  VideoId video_id = 2;
}

message VideosMetaData {
  repeated VideoMetaData videos = 1;
}

service VideoService {
  rpc get_video_metadata(VideoId) returns (VideoMetaData) {};
  rpc get_videos_metadata (google.protobuf.Empty) returns (VideosMetaData) {};
  rpc video_metadata_by_show(ShowId) returns (VideosMetaData) {};
  rpc get_video (VideoId) returns (stream Video) {};
  rpc add_video (UploadVideo) returns (Success) {};
}